# iot-base

./: .gitignore  README.md
Test/: DeepStreamScripts
Test-Windows/: CMakeLists.txt  helloworld.cpp
Test/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
Test/mosquitto/: CMakeLists.txt  temperature_conversion.cpp  temperature_conversion.h  test_cplus.cpp
Test/multi-streams/: CMakeLists.txt  VideoSession.cpp  VideoSession.h  VideosManager.cpp  VideosManager.h  multistream.cpp
Test/nvidia-jetson/: CMakeLists.txt  testIPCam.cpp
Test/nvidia-optflow/: CMakeLists.txt  IP_Camera.json  main.cpp
Test/nvidia-trt/: CMakeLists.txt  main.cpp
Test/paho-mqtt/: pub.py  sub.py
apps-python/cam-station/: CameraManager.py  IP_Camera.json  Notification.json  SSDLib.py  config.py  local_pub.py  main.py  mainwindow.py  mainwindow.ui  mapwidget.py  mapwidget.ui  mplcanvas.py  notification.py  testImage.py  testVideo.py  ui_mainwindow.py  ui_mapwidget.py  webcam.py
apps-python/simple-view/: CameraManager.py  IP_Camera.json  config.py  main.py  mainwindow.py  mainwindow.ui  test_process.py  ui_mainwindow.py
apps-python/test/: sim900A.py
